Bug 98416 - piglit.spec.ext_image_dma_buf_import.ext_image_dma_buf_import-refcount regression
Summary: piglit.spec.ext_image_dma_buf_import.ext_image_dma_buf_import-refcount regres...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-24 18:41 UTC by Mark Janes
Modified: 2017-07-24 22:40 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2016-10-24 18:41:31 UTC
Bisected to:
------------------------------------------------------
Author:     Chris Wilson <chris@chris-wilson.co.uk>
intel: Migrate handle/name lookups from linear lists to hashtables

Walking a linear list to find a matching PRIME handle or flinked name
does not scale and becomes a major burden with just a few objects.
That said, the fixed size hash is not much better, it just buckets the
look into a few separate chains rather than one long one.

References: https://bugs.freedesktop.org/show_bug.cgi?id=94631
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
------------------------------------------------------

/tmp/build_root/m64/lib/piglit/bin/ext_image_dma_buf_import-refcount -auto -fbo

stderr:
intel_do_flush_locked failed: Invalid argument
intel_do_flush_locked failed: Invalid argument
Comment 1 Chris Wilson 2016-10-24 20:20:16 UTC
commit fe4579e263c8da19f790cc5c5430e12d9b1687b5
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Oct 24 21:17:13 2016 +0100

    intel: Look prime handle up in handle hash table
    
    A slightly confused copy'n'paste from the open path where we pass in
    handle but use it as a global name, in the prime handle-from-fd pass we
    pass in handle and do mean handle!
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=98416
    Fixes: 2f23bf1b7b89 ("intel: Migrate handle/name lookups from linear lists...")
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.